trying to fix bg image not showing

--- a/Script/style.css
+++ b/Script/style.css
@@ -45,7 +45,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url(/Asset/noise.gif);
+    background-image: url(Asset/noise.gif);
 }
 
 /* header styling */
@@ -181,7 +181,7 @@ header .works {
     top: 0;
     left: 0;
     z-index: -1;
-    background-image: url(/Asset/wolf-black-background.png);
+    background-image: url(Asset/wolf-black-background.png);
     background-position: 50%;
     background-size: cover;
     background-repeat: no-repeat;
